# AI

./: .gitignore  pyproject.toml
configs/: ds_config.json  model_300m.yaml  train_300m.yaml
notebooks/: train_colab.ipynb  train_kaggle.ipynb  train_lightning.ipynb
scripts/: download_data.py  serve.py  train.py
src/inference/: export.py  generate.py  quantize.py  server.py
src/model/: attention.py  cache.py  config.py  embedding.py  ffn.py  mamba_block.py  moe.py  norm.py  rope.py  transformer.py
src/training/: checkpoint.py  data.py  optim.py  scheduler.py  tokenizer.py  trainer.py
src/utils/: logging.py  memory.py
tests/: test_inference.py  test_model.py  test_training.py
